[tool.poetry]
name = "scheduler-routine-api"
version = "0.1.0"
description = ""
authors = ["vilelf <vilelf.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
uvicorn = "^0.13.3"
requests = "^2.25.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
